@@ -1074,9 +1074,6 @@ argument_list|(
 name|getMediator
 argument_list|()
 argument_list|,
-operator|(
-name|DbEntity
-operator|)
 name|relationship
 operator|.
 name|getSourceEntity
@@ -1139,9 +1136,6 @@ argument_list|(
 name|getMediator
 argument_list|()
 argument_list|,
-operator|(
-name|DbEntity
-operator|)
 name|relationship
 operator|.
 name|getTargetEntity
@@ -1485,37 +1479,6 @@ block|{
 name|stopEditing
 argument_list|()
 expr_stmt|;
-comment|// extract names...
-name|String
-name|sourceEntityName
-init|=
-name|NameBuilder
-operator|.
-name|builder
-argument_list|(
-name|relationship
-argument_list|,
-name|relationship
-operator|.
-name|getSourceEntity
-argument_list|()
-argument_list|)
-operator|.
-name|baseName
-argument_list|(
-name|name
-operator|.
-name|getText
-argument_list|()
-operator|.
-name|trim
-argument_list|()
-argument_list|)
-operator|.
-name|name
-argument_list|()
-decl_stmt|;
-comment|// check if reverse name is valid
 name|DbJoinTableModel
 name|model
 init|=
@@ -1541,70 +1504,19 @@ operator|>
 literal|0
 decl_stmt|;
 comment|// handle name update
-if|if
-condition|(
-operator|!
-name|Util
-operator|.
-name|nullSafeEquals
+name|handleNameUpdate
 argument_list|(
-name|sourceEntityName
+name|relationship
 argument_list|,
-name|relationship
+name|name
 operator|.
-name|getName
+name|getText
 argument_list|()
-argument_list|)
-condition|)
-block|{
-name|String
-name|oldName
-init|=
-name|relationship
 operator|.
-name|getName
+name|trim
 argument_list|()
-decl_stmt|;
-name|relationship
-operator|.
-name|setName
-argument_list|(
-name|sourceEntityName
 argument_list|)
 expr_stmt|;
-name|undo
-operator|.
-name|addNameUndo
-argument_list|(
-name|relationship
-argument_list|,
-name|oldName
-argument_list|,
-name|sourceEntityName
-argument_list|)
-expr_stmt|;
-name|getMediator
-argument_list|()
-operator|.
-name|fireDbRelationshipEvent
-argument_list|(
-operator|new
-name|RelationshipEvent
-argument_list|(
-name|this
-argument_list|,
-name|relationship
-argument_list|,
-name|relationship
-operator|.
-name|getSourceEntity
-argument_list|()
-argument_list|,
-name|oldName
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
 name|model
 operator|.
 name|commit
@@ -1769,23 +1681,10 @@ block|}
 block|}
 else|else
 block|{
-name|String
-name|targetEntityName
-init|=
-name|NameBuilder
-operator|.
-name|builder
+name|handleNameUpdate
 argument_list|(
 name|reverseRelationship
 argument_list|,
-name|relationship
-operator|.
-name|getTargetEntity
-argument_list|()
-argument_list|)
-operator|.
-name|baseName
-argument_list|(
 name|reverseName
 operator|.
 name|getText
@@ -1794,76 +1693,12 @@ operator|.
 name|trim
 argument_list|()
 argument_list|)
-operator|.
-name|name
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|Util
-operator|.
-name|nullSafeEquals
-argument_list|(
-name|targetEntityName
-argument_list|,
-name|reverseRelationship
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-condition|)
-block|{
-name|String
-name|oldName
-init|=
-name|reverseRelationship
-operator|.
-name|getName
-argument_list|()
-decl_stmt|;
-name|reverseRelationship
-operator|.
-name|setName
-argument_list|(
-name|targetEntityName
-argument_list|)
 expr_stmt|;
-name|undo
-operator|.
-name|addNameUndo
-argument_list|(
-name|reverseRelationship
-argument_list|,
-name|oldName
-argument_list|,
-name|targetEntityName
-argument_list|)
-expr_stmt|;
-name|getMediator
-argument_list|()
-operator|.
-name|fireDbRelationshipEvent
-argument_list|(
-operator|new
-name|RelationshipEvent
-argument_list|(
-name|this
-argument_list|,
-name|reverseRelationship
-argument_list|,
-name|reverseRelationship
-operator|.
-name|getSourceEntity
-argument_list|()
-argument_list|,
-name|oldName
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 name|Collection
+argument_list|<
+name|DbJoin
+argument_list|>
 name|reverseJoins
 init|=
 name|getReverseJoins
@@ -1934,7 +1769,126 @@ argument_list|)
 expr_stmt|;
 block|}
 specifier|private
+name|void
+name|handleNameUpdate
+parameter_list|(
+name|DbRelationship
+name|relationship
+parameter_list|,
+name|String
+name|userInputName
+parameter_list|)
+block|{
+if|if
+condition|(
+name|Util
+operator|.
+name|nullSafeEquals
+argument_list|(
+name|relationship
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|userInputName
+argument_list|)
+condition|)
+block|{
+return|return;
+block|}
+name|String
+name|sourceEntityName
+init|=
+name|NameBuilder
+operator|.
+name|builder
+argument_list|(
+name|relationship
+argument_list|,
+name|relationship
+operator|.
+name|getSourceEntity
+argument_list|()
+argument_list|)
+operator|.
+name|baseName
+argument_list|(
+name|userInputName
+argument_list|)
+operator|.
+name|name
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|Util
+operator|.
+name|nullSafeEquals
+argument_list|(
+name|sourceEntityName
+argument_list|,
+name|relationship
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return;
+block|}
+name|String
+name|oldName
+init|=
+name|relationship
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+name|relationship
+operator|.
+name|setName
+argument_list|(
+name|sourceEntityName
+argument_list|)
+expr_stmt|;
+name|undo
+operator|.
+name|addNameUndo
+argument_list|(
+name|relationship
+argument_list|,
+name|oldName
+argument_list|,
+name|sourceEntityName
+argument_list|)
+expr_stmt|;
+name|getMediator
+argument_list|()
+operator|.
+name|fireDbRelationshipEvent
+argument_list|(
+operator|new
+name|RelationshipEvent
+argument_list|(
+name|this
+argument_list|,
+name|relationship
+argument_list|,
+name|relationship
+operator|.
+name|getSourceEntity
+argument_list|()
+argument_list|,
+name|oldName
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
 name|Collection
+argument_list|<
+name|DbJoin
+argument_list|>
 name|getReverseJoins
 parameter_list|()
 block|{
@@ -1970,14 +1924,19 @@ block|{
 return|return
 name|Collections
 operator|.
-name|EMPTY_LIST
+name|emptyList
+argument_list|()
 return|;
 block|}
 name|List
+argument_list|<
+name|DbJoin
+argument_list|>
 name|reverseJoins
 init|=
 operator|new
 name|ArrayList
+argument_list|<>
 argument_list|(
 name|joins
 operator|.
