@@ -31,6 +31,7 @@ Bug Fixes:
 CAY-2137 When generating SQL from EJBQL, use "AND" to separate multiple join conditions
 CAY-2174 Change FK attribute name cause ObjAttribute appear after Reverse Engineering
 CAY-2175 AliasName used in EJBQLQuery is not working if it contains mixed case
+CAY-2183 Newly created DbRelationship is unexpectedly renamed by the Modeler
 
 ----------------------------------
 Release: 4.0.M4
